// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Beams.vue match snapshot item 1`] = `
<div class="beams">
  <v-container-stub tag="div" fluid="true">
    <v-row-stub tag="div" class="display-1 mx-1 mt-3 primary--text">
      <v-col-stub tag="div" col="8" class="pa-0 ma-0"><span class="me-2"><v-icon-stub>mdi-spotlight-beam</v-icon-stub></span>Beams
        <span><v-icon-stub large="" color="primary">mdi-chevron-right</v-icon-stub>
          beam001
        </span></v-col-stub>
    </v-row-stub>
    <transition-stub>
      <keep-alive-stub>
        <router-view-stub></router-view-stub>
      </keep-alive-stub>
    </transition-stub>
  </v-container-stub>
</div>
`;

exports[`Beams.vue match snapshot list 1`] = `
<div class="beams">
  <v-container-stub tag="div" fluid="true">
    <v-row-stub tag="div" class="display-1 mx-1 mt-3 primary--text">
      <v-col-stub tag="div" col="8" class="pa-0 ma-0"><span class="me-2"><v-icon-stub>mdi-spotlight-beam</v-icon-stub></span>Beams
        <!---->
      </v-col-stub>
    </v-row-stub>
    <transition-stub>
      <keep-alive-stub>
        <router-view-stub></router-view-stub>
      </keep-alive-stub>
    </transition-stub>
  </v-container-stub>
</div>
`;
